--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,62 +2,86 @@
   box-sizing: border-box;
 }
 
-body,
+
 html {
-  height: 100%;
   padding: 0;
   margin: 0;
-  font-family: sans-serif;
-  color: #333;
+  color: #ffffff;
+  background-color: lightcyan;
+  position: relative;
+}
+
+body {
+  background-color: lightgray;
+}
+
+.main-body {
+  min-height: 100vh;
+}
+
+a:hover {
+  color: lightpink;
 }
 
 a {
   text-decoration: none;
-  color: #225ca3;
+  color: skyblue;
   font-weight: bold;
-  transition: color 0.1s;
-}
-
-a:hover {
-  color: #3486eb;
+  transition: color .1s;
 }
 
 button {
-  background-color: #225ca3;
+  background-color: #A7C0CD;
   border: 0;
   padding: 1%;
-  color: white;
+  color: rgb(0, 0, 0);
   font-weight: bold;
-  transition: background-color 0.1s;
   cursor: pointer;
   border-radius: 5px;
+  margin: 5px;
 }
 
 button:hover {
-  background-color: #3486eb;
+  background-color:lightgray;
+  color: darkblue;
 }
+
+.dashboard-btn {
+  color: #111738;
+} 
 
 .post-list {
   margin: 0;
   padding: 0;
-  list-style-type: none;
+  color: white;
 }
 
-textarea,
-input {
-  padding: 0.5%;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1%;
+  background-color: #111738;
+}
+
+header h1 {
+  font-size: 70px;
+  font-family: 'Arial';
+}
+
+textarea, input {
+  padding: .5%;
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid rgb(0, 0, 0);
 }
 
-textarea:focus,
-input:focus {
+textarea:focus, input:focus {
   outline: none;
-  border: 1px solid #3486eb;
+  border: 1px solid #ffffff;
 }
 
 textarea {
-  min-width: 40%;
+  max-width: 60%;
   min-height: 100px;
 }
 
@@ -69,41 +93,10 @@ form label {
   display: block;
 }
 
-.wrapper {
-  width: 100%;
-  min-height: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-}
-
-header {
-  border-bottom: 1px solid #ccc;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1%;
-  background-color: #333;
-}
-
-header h1 {
-  font-size: 1em;
-  border: 2px outset #7d7d7d;
-  border-radius: 5px;
-  background-color: #ccc;
-  padding: 1.25rem;
-}
 
 main {
   flex: 1;
   padding: 2% 4%;
-}
-
-nav {
-  padding: 1.2rem;
-  text-align: right;
-  white-space: pre;
 }
 
 .btn-no-style {
@@ -112,24 +105,26 @@ nav {
   padding: 0;
   cursor: pointer;
   text-decoration: none;
-  color: #225ca3;
+  color: #ffffff;
   font-size: 100%;
   font-weight: bold;
-  transition: color 0.1s;
+  transition: color .1s;
   margin-left: 16px;
 }
 
 .btn-no-style:hover {
-  background: none;
-  color: #3486eb;
+  background-color:#111738;
+  color: #FE7860;
 }
 
 .delete-post-btn {
-  background-color: #d41414;
+  background-color:rgb(62, 23, 151);
+  color: rgb(255, 255, 255);
 }
 
 .delete-post-btn:hover {
-  background-color: #ff643d;
+  background-color:rgb(0, 0, 0, .6);
+  color: lightcyan;
 }
 
 .post {
@@ -137,30 +132,42 @@ nav {
   line-height: 150%;
 }
 
-.post .title {
-  font-style: italic;
-  font-size: 1.25rem;
-  color: #7d7d7d;
-}
-
 .post .title span {
   font-style: italic;
-  font-size: 0.8rem;
-  color: #7d7d7d;
+  font-size: 90%;
+  color: lightblue;
 }
 
-.edit-link {
-  display: block;
-  margin: -1.5% 0 2% 0;
+.sv-post {
+    background-color: #111738;
+    color: azure;
+}
+
+.add-comment {
+    background-color: #111738;
+    color: white;
 }
 
 .upvote-btn {
-  background-color: #197d0f;
-  transition: background-color 0.1s;
+  background-color:rgba(255, 255, 255, 0.6);
+  color: rgb(0, 0, 0);
+  
+}
+
+.edit {
+  border-radius: 10px;
+  padding-top: 5px;
+  background-color: #111738;
+}
+
+.upvote-btn {
+  background-color: #111738;
+  color: lightblue;
 }
 
 .upvote-btn:hover {
-  background-color: #1f9c13;
+  background-color: saddlebrown;
+  color: rgb(255, 255, 255);
 }
 
 .comment-form {
@@ -170,40 +177,136 @@ nav {
 .comment {
   padding: 1%;
   margin-bottom: 1%;
+  background-color:lightgrey;
+  color: rgb(0, 0, 0);
+  width: 100vw;
 }
 
 .comment:nth-child(odd) {
-  background-color: #f0f5ff;
+  background-color: lightgrey;
+  color: #111738;
 }
 
 .comment .meta {
   font-size: 90%;
-  margin-bottom: 0.5%;
-  opacity: 0.6;
+  margin-bottom: .5%;
 }
 
-.new-post-form input,
-textarea {
-  width: 80%;
+#comment-body {
+  opacity: 80%;
+  color: rgb(0, 0, 0);
+  padding: 5px;
+  margin: 5px;
+  width: 100%;
+}
+
+.submit-btn {
+  color: rgb(255, 255, 255);
+  background-color: #111738;
+}
+
+
+h2,
+label,
+li
+{
+  color: black;
+}
+
+.new-post {
+  position: right;
+  align-items: right;
+}
+
+.new-post-form input {
+  width: 300px;
+}
+
+.edit-title {
+  color: black;
 }
 
 .edit-post-form {
   margin-bottom: 5%;
+  color: black;
 }
 
-.row {
-  display: flex;
+.edit-post-form a {
+  color: black;
 }
 
-.column {
-  flex: 50%;
-  padding: 1.25rem;
+.edit-post-form a:hover{
+  color: lightskyblue;
+}
+
+.btn {
+  color: white;
+  background-color: #111738;
+  font-weight: bold;
+}
+
+.btn:hover{
+  color: lightpink;
+}
+
+
+
+
+.post {
+  background-color: #A7C0CD;
+  margin: auto;
+  justify-content: center;
+  color: #111738;
+  border: 1px solid #ffffff;
+  opacity: 80%;
+}
+
+.post p {
+  color: rgb(253, 247, 247);
+}
+
+.post a{
+  color: #ffffff;
+}
+
+.card a:hover {
+  color: #ffffff;
+
+}
+
+.meta a {
+  color: #ffffff;
+
+}
+
+.meta a:hover {
+  color: #ffffff;
+
+}
+
+.card {
+  opacity: 100%;
+  background-color: skyblue;
+}
+
+footer a:hover{
+  color: lightskyblue;
 }
 
 footer {
-  border-top: 1px solid #ccc;
-  display: flex;
-  justify-content: center;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  background-color: #111738;
+  border-top: 1px solid #ffffff;
   padding: 1%;
-  font-size: 110%;
+  text-decoration: none;
+}
+
+footer h3 {
+  color: #ffffff;
+}
+
+footer a {
+  color: #ffffff;
 }
