--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,10 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+ <link rel="stylesheet" href= 'https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css' />
+  <link
+  rel='stylesheet'
+  href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css'
+/>
+<script
+  src='https://code.jquery.com/jquery-3.6.2.min.js'
+  integrity='sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA='
+  crossorigin='anonymous'
+>
+</script>
+<script
+  src='https://code.jquery.com/ui/1.13.1/jquery-ui.js'
+  integrity='sha256-6XMVI0zB8cRzfZjqKcD01PBsAy3FlDASrlC8SxCpInY='
+  crossorigin='anonymous'
+>
+</script>
+<link
+  href='https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css'
+  rel='stylesheet'
+/>
+<link rel="icon" type="image/jpg" href="../assets/Lightbulb-technology-2.jpg">
+<link rel="stylesheet" href="/css/jass.css">
+<link rel="stylesheet" href="/css/style.css">
+
     <title>Tech Blog</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css"
-        integrity="sha512-P5MgMn1jBN01asBgU0z60Qk4QxiXo86+wlFahKrsQf37c9cro517WzVSPPV1tDKzhku2iJ2FVgL67wG03SGnNA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
